Created the ui for the data base menu

--- a/WPFConverter/WPFConverter.csproj
+++ b/WPFConverter/WPFConverter.csproj
@@ -98,7 +98,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\delete-delete.png" />
+    <Resource Include="Images\edit-button.png" />
+    <Resource Include="Images\money.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Logo.png" />
   </ItemGroup>
