--- a/WPFConverter/App.config
+++ b/WPFConverter/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name ="ConnectionCurrencyConverterDb" 
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Ferna\source\repos\WPFConverter\WPFConverter\DataBase\CurrencyConverterDb.mdf;Integrated Security=True"/>
+	</connectionStrings>
 </configuration>
